[metadata]
name = chainqueue
version = 0.0.2b2
description = Generic blockchain transaction queue control
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/chaintools/chainqueue
keywords =
	cic
	cryptocurrency
	ethereum
	solidarity
	mutual_credit
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE.txt

[options]
python_requires = >= 3.6
packages = 
	chainqueue
	chainqueue.db
	chainqueue.db.models
	chainqueue.db.migrations
	chainqueue.sql
	chainqueue.adapters

#[options.entry_points]
#console_scripts =
#	chainqueue-eth-server = chainqueue.runnable.server_eth:main
